--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "**/*": [
+    "*.{js,jsx,ts,tsx,json,css,md}": [
       "eslint --fix",
       "prettier --write"
     ]
