--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
     "react/react-in-jsx-scope": 0,
+    "@typescript-eslint/no-unused-vars": "off",
   },
   "settings": {
     "react": {
