--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "react-hooks/exhaustive-deps": "error",
     "react/react-in-jsx-scope": 0,
     "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "off",
   },
   "settings": {
     "react": {
