--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
+    "swr": "^2.2.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
