--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/x-date-pickers": "^7.1.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
