--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/x-data-grid": "^7.3.0",
     "@mui/x-date-pickers": "^7.1.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
