--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API='http://ec2-13-127-66-53.ap-south-1.compute.amazonaws.com:9000'
+VITE_API='https://ec2-13-127-66-53.ap-south-1.compute.amazonaws.com:9000'
